Added functionality for login/register firebase auth - Added database protocol stubs for auth and future development on local uploads - Added firebase controller - Refactor authsegue to tab bar controller

--- a/OpenCurate/View/Base.lproj/Main.storyboard
+++ b/OpenCurate/View/Base.lproj/Main.storyboard
@@ -215,7 +215,7 @@
                                 <rect key="frame" x="40" y="434" width="334" height="34"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhx-8m-dXL">
                                 <rect key="frame" x="131" y="602" width="152" height="32"/>
