--- a/OpenCurate/View/Base.lproj/Main.storyboard
+++ b/OpenCurate/View/Base.lproj/Main.storyboard
@@ -194,28 +194,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Mf-h3-Xmb">
-                                <rect key="frame" x="20" y="696.5" width="374" height="28.5"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Add Images">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="0.0"/>
-                                    <color key="baseBackgroundColor" systemColor="linkColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="zD9-cL-MYJ" kind="show" id="pga-fm-Mo3"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ciZ-nr-yvh">
-                                <rect key="frame" x="20" y="735" width="374" height="29"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Logout">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="0.0"/>
-                                    <color key="baseBackgroundColor" systemColor="systemRedColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="logoutButton:" destination="UJf-lr-np6" eventType="touchUpInside" id="KgH-2i-czt"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Uploads" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXj-Zf-zjW">
                                 <rect key="frame" x="0.0" y="88" width="414" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -225,7 +203,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zpg-E9-lxw">
                                 <rect key="frame" x="0.0" y="117" width="414" height="571.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KNS-WA-Dwp">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KNS-WA-Dwp">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -235,56 +213,68 @@
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="uploadImageCell" id="yLu-ND-cqJ" customClass="UploadImageCollectionViewCell" customModule="OpenCurate" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="QiR-FI-ZBd">
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mxz-ci-6P2">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mxz-ci-6P2">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Mxz-ci-6P2" firstAttribute="leading" secondItem="QiR-FI-ZBd" secondAttribute="leading" id="Wvh-VJ-4se"/>
-                                                <constraint firstItem="Mxz-ci-6P2" firstAttribute="top" secondItem="QiR-FI-ZBd" secondAttribute="top" id="Z5d-QV-lSm"/>
-                                                <constraint firstAttribute="trailing" secondItem="Mxz-ci-6P2" secondAttribute="trailing" id="tGg-wa-dQw"/>
-                                                <constraint firstAttribute="bottom" secondItem="Mxz-ci-6P2" secondAttribute="bottom" id="vzh-nv-x1J"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
+                                        </view>
+                                        <size key="customSize" width="128" height="128"/>
                                         <connections>
-                                            <outlet property="uploadedImage" destination="QiR-FI-ZBd" id="QuH-Uk-AYy"/>
+                                            <outlet property="uploadedImage" destination="Mxz-ci-6P2" id="1if-PD-0CL"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Mf-h3-Xmb">
+                                <rect key="frame" x="20" y="735.5" width="374" height="28.5"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Add Images">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="0.0"/>
+                                    <color key="baseBackgroundColor" systemColor="linkColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="zD9-cL-MYJ" kind="show" id="pga-fm-Mo3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iec-CB-U1F"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="MXj-Zf-zjW" firstAttribute="top" secondItem="iec-CB-U1F" secondAttribute="top" id="1fF-J5-5Rm"/>
-                            <constraint firstItem="3Mf-h3-Xmb" firstAttribute="top" secondItem="Zpg-E9-lxw" secondAttribute="bottom" constant="8" id="3H7-sW-wq0"/>
-                            <constraint firstItem="ciZ-nr-yvh" firstAttribute="top" secondItem="3Mf-h3-Xmb" secondAttribute="bottom" constant="10" id="5Oo-Il-Y6x"/>
-                            <constraint firstItem="ciZ-nr-yvh" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" constant="20" id="BOD-qT-naY"/>
-                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="top" secondItem="MXj-Zf-zjW" secondAttribute="bottom" constant="8" id="Eq3-Uf-7eA"/>
+                            <constraint firstItem="3Mf-h3-Xmb" firstAttribute="top" secondItem="Zpg-E9-lxw" secondAttribute="bottom" constant="47" id="7ib-hB-AZ9"/>
+                            <constraint firstItem="iec-CB-U1F" firstAttribute="trailing" secondItem="3Mf-h3-Xmb" secondAttribute="trailing" constant="20" id="9Qy-J5-GsD"/>
+                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="top" secondItem="MXj-Zf-zjW" secondAttribute="bottom" constant="8" id="BYR-MW-JB0"/>
+                            <constraint firstItem="iec-CB-U1F" firstAttribute="bottom" secondItem="3Mf-h3-Xmb" secondAttribute="bottom" id="Okc-xm-70R"/>
                             <constraint firstItem="MXj-Zf-zjW" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" id="WWx-Tc-ISN"/>
                             <constraint firstItem="iec-CB-U1F" firstAttribute="trailing" secondItem="MXj-Zf-zjW" secondAttribute="trailing" id="fNe-Fa-PWF"/>
-                            <constraint firstItem="3Mf-h3-Xmb" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" constant="20" id="k78-uT-uHz"/>
-                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="trailing" secondItem="iec-CB-U1F" secondAttribute="trailing" id="kZG-oe-gRN"/>
-                            <constraint firstItem="iec-CB-U1F" firstAttribute="bottom" secondItem="ciZ-nr-yvh" secondAttribute="bottom" id="lzn-Ol-8fQ"/>
-                            <constraint firstItem="iec-CB-U1F" firstAttribute="trailing" secondItem="ciZ-nr-yvh" secondAttribute="trailing" constant="20" id="wXx-Yt-eSK"/>
-                            <constraint firstItem="iec-CB-U1F" firstAttribute="trailing" secondItem="3Mf-h3-Xmb" secondAttribute="trailing" constant="20" id="x3P-Ib-Piv"/>
-                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" id="xyu-Fd-Z94"/>
+                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="trailing" secondItem="iec-CB-U1F" secondAttribute="trailing" id="n2j-jJ-ejJ"/>
+                            <constraint firstItem="Zpg-E9-lxw" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" id="nEs-dl-CHZ"/>
+                            <constraint firstItem="3Mf-h3-Xmb" firstAttribute="leading" secondItem="iec-CB-U1F" secondAttribute="leading" constant="20" id="qex-bs-pfm"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="LJK-un-aXs"/>
+                    <navigationItem key="navigationItem" id="LJK-un-aXs">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="JKy-Fk-e4r">
+                            <color key="tintColor" systemColor="systemRedColor"/>
+                            <connections>
+                                <action selector="logoutButton:" destination="UJf-lr-np6" id="SdG-go-BoS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="userUploadCollectionView" destination="Zpg-E9-lxw" id="1Ff-Br-yRA"/>
                         <segue destination="XCl-Il-d99" kind="presentation" identifier="logoutSegue" modalPresentationStyle="fullScreen" id="Pgb-b0-k3f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KAI-bT-Mlu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4460.8695652173919" y="-144.64285714285714"/>
+            <point key="canvasLocation" x="3551" y="626"/>
         </scene>
         <!--Auth View Controller-->
         <scene sceneID="qYg-dI-tb6">
@@ -850,10 +840,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IRW-hz-5lD">
-                                <rect key="frame" x="0.0" y="44" width="414" height="708"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="615"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D5H-5C-LTw">
-                                <rect key="frame" x="10" y="772" width="394" height="31"/>
+                                <rect key="frame" x="10" y="723" width="394" height="31"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="D5H-5C-LTw" secondAttribute="height" multiplier="394:31" id="F19-ff-pwP"/>
@@ -902,7 +892,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8GA-Fo-bTR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5353.6231884057979" y="-145.3125"/>
+            <point key="canvasLocation" x="4572" y="625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MMG-ac-8hs">
